--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,5 +2,9 @@
 	"appId": "io.ionic.starter",
 	"appName": "appcemex",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"hostname": "com.cemex.app",
+		"androidScheme": "https"
+	}
 }
