--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jwt-claims": "^1.0.1",
     "jwt-decode": "^3.1.2",
     "ng-otp-input": "^1.8.5",
+    "pdfmake": "^0.2.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
