Agregado MSAL Y Azure B2C

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,10 +1,19 @@
 {
-	"appId": "io.ionic.starter",
+	"appId": "com.cemex.logistic.load.am.dev",
 	"appName": "appcemex",
 	"webDir": "www",
 	"bundledWebRuntime": false,
 	"server": {
 		"hostname": "com.cemex.app",
 		"androidScheme": "https"
+	},
+	"plugins": {
+		"PushNotifications": {
+			"presentationOptions": [
+				"badge",
+				"sound",
+				"alert"
+			]
+		}
 	}
 }
