--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@auth0/angular-jwt": "^5.0.2",
-    "@awesome-cordova-plugins/http": "^5.43.0",
+    "@awesome-cordova-plugins/core": "6.2.0",
+    "@awesome-cordova-plugins/http": "^6.2.0",
+    "@awesome-cordova-plugins/in-app-browser": "^6.2.0",
+    "@azure/msal-angular": "^2.0.1",
+    "@azure/msal-browser": "^2.15.0",
     "@capacitor-community/http": "^1.4.1",
-    "@capacitor/android": "^3.4.3",
-    "@capacitor/app": "1.1.1",
-    "@capacitor/camera": "^1.3.1",
-    "@capacitor/core": "3.4.3",
-    "@capacitor/filesystem": "^1.1.0",
-    "@capacitor/geolocation": "^1.3.1",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.2",
-    "@capacitor/status-bar": "1.0.8",
-    "@capacitor/storage": "^1.2.5",
+    "@capacitor/android": "4.6.1",
+    "@capacitor/app": "4.0.1",
+    "@capacitor/camera": "4.0.1",
+    "@capacitor/core": "4.0.1",
+    "@capacitor/filesystem": "4.0.1",
+    "@capacitor/geolocation": "4.0.1",
+    "@capacitor/haptics": "4.0.1",
+    "@capacitor/keyboard": "4.0.1",
+    "@capacitor/push-notifications": "^4.1.2",
+    "@capacitor/status-bar": "4.0.1",
     "@cmx-web-components/angular": "^0.9.12",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/file": "^5.36.0",
@@ -41,6 +45,7 @@
     "@ionic/storage-angular": "^3.0.6",
     "cordova-plugin-advanced-http": "^3.3.1",
     "cordova-plugin-file": "^7.0.0",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "jwt-claims": "^1.0.1",
     "jwt-decode": "^3.1.2",
     "ng-otp-input": "^1.8.5",
@@ -59,7 +64,7 @@
     "@angular/compiler": "~13.2.2",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
-    "@capacitor/cli": "3.4.3",
+    "@capacitor/cli": "4.0.1",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/cli": "6.20.1",
     "@types/jasmine": "~3.6.0",
@@ -79,7 +84,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.4.4"
   },
