--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,10 +1,10 @@
 {
-	"appId": "com.cemex.logistic.load.am.dev",
+	"appId": "com.cemex.logistic.load.am",
 	"appName": "appcemex",
 	"webDir": "www",
 	"bundledWebRuntime": false,
 	"server": {
-		"hostname": "com.cemex.app",
+		"hostname": "Jobsiteapp",
 		"androidScheme": "https"
 	},
 	"plugins": {
