--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -4,7 +4,7 @@
 	"webDir": "www",
 	"bundledWebRuntime": false,
 	"server": {
-		"hostname": "Jobsiteapp",
+		"hostname": "jobsiteapp",
 		"androidScheme": "https"
 	},
 	"plugins": {
