--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@capacitor/preferences": "^4.0.2",
     "@capacitor/push-notifications": "^4.1.2",
     "@capacitor/status-bar": "4.0.1",
-    "@cmx-web-components/angular": "0.9.14",
+    "@cmx-web-components/angular": "0.9.15-beta.11",
+    "@ionic-native/call-number": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/file": "^5.36.0",
     "@ionic-native/http": "^4.20.0",
@@ -46,6 +47,7 @@
     "@ionic/lab": "^3.2.13",
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage-angular": "^3.0.6",
+    "call-number": "^1.0.1",
     "cordova-plugin-advanced-http": "^3.3.1",
     "cordova-plugin-file": "^7.0.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
